--- a/.github/workflows/cicd-pipelines.yml
+++ b/.github/workflows/cicd-pipelines.yml
@@ -41,6 +41,6 @@ jobs:
             docker cp /home/yis/academics_devel.sql mysql_prod_container:/tmp/academics_devel.sql
 
             echo "Import dump ke mysql_prod..."
-            docker exec mysql_prod_container mysql -uroot -pTelkom123! --databases academics < /tmp/academics_devel.sql
+            docker exec mysql_prod_container sh -c 'mysql -u root -pTelkom123! academics < /tmp/academics_devel.sql'
 
             echo "Berhasil Import Database ke mysql_prod"
