--- a/.github/workflows/cicd-pipelines.yml
+++ b/.github/workflows/cicd-pipelines.yml
@@ -35,12 +35,13 @@ jobs:
 
             # CD (Continuous Deployment) untuk Database
             echo "DUMP Datbase dari mysql_devel..."
-            docker exec mysql_devel_container mysqldump -u root -pTelkom123! --databases academics_devel > /home/yis/academics_devel.sql
+            docker exec mysql_devel_container mysqldump --add-drop-table -u root -pTelkom123! --databases academics_devel > /home/yis/academics_devel.sql
 
             echo "Copy dump ke msqyl_prod..."
             docker cp /home/yis/academics_devel.sql mysql_prod_container:/tmp/academics_devel.sql
 
             echo "Import dump ke mysql_prod..."
+            docker exec mysql_prod_container sh -c 'mysql -u root -pTelkom123! -e "DROP DATABASE IF EXISTS academics;"'
             docker exec mysql_prod_container sh -c 'mysql -u root -pTelkom123! academics < /tmp/academics_devel.sql'
 
             echo "Berhasil Import Database ke mysql_prod"
