--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,12 @@ services:
       - SONAR_JDBC_URL=jdbc:postgresql://sonar_db:5432/sonarqube
       - SONAR_JDBC_USERNAME=sonar
       - SONAR_JDBC_PASSWORD=Telkom123!
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true  # Disable memory check for dev env
+      - JAVA_OPTS=-Xmx1g -Xms512m  # Batasi Java Heap sesuai kapasitas
+    deploy:
+      resources:
+        limits:
+          memory: 2g
     depends_on:
       - sonar_db
     networks:
