--- a/sample-ci-testing/pom.xml
+++ b/sample-ci-testing/pom.xml
@@ -69,6 +69,11 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.11.0.3922</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
