--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -29,6 +29,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Build and analyze with SonarQube
+        working-directory: sample-ci-testing
         run: mvn clean verify sonar:sonar \
           -Dsonar.projectKey=sample_ci_testing \
           -Dsonar.host.url=http://202.43.248.139:9000 \
