--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -33,5 +33,6 @@ jobs:
         run: |
             mvn clean verify sonar:sonar \
             -Dsonar.projectKey=sample_ci_testing \
-            -Dsonar.host.url=http://202.43.248.139:9000 \
+            -Dsonar.organization=nama_organisasi_sonarcloud \
+            -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
