Add JaCoCo Maven plugin for code coverage reporting and update SonarQube analysis command

--- a/sample-ci-testing/pom.xml
+++ b/sample-ci-testing/pom.xml
@@ -74,6 +74,25 @@
           <artifactId>sonar-maven-plugin</artifactId>
           <version>3.11.0.3922</version>
         </plugin>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.10</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
