--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -27,17 +27,10 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build and test with coverage
-        working-directory: sample-ci-testing
-        run: mvn clean verify
-      - name: Verify JaCoCo report exists
-        working-directory: sample-ci-testing
-        run: ls -l target/site/jacoco/jacoco.xml
-
       - name: Build and analyze with SonarQube
         working-directory: sample-ci-testing
         run: |
-            mvn sonar:sonar \
+            mvn clean verify sonar:sonar \
             -Dsonar.projectKey=yudhaislamisulistya_sample-ci-testing \
             -Dsonar.organization=yudhaislamisulistya \
             -Dsonar.host.url=https://sonarcloud.io \
