Refactor SonarQube environment variables in docker-compose.yml and add longParameterList method in App.java

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,8 @@ services:
       - SONAR_JDBC_URL=jdbc:postgresql://sonar_db:5432/sonarqube
       - SONAR_JDBC_USERNAME=sonar
       - SONAR_JDBC_PASSWORD=Telkom123!
-      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true  # Disable memory check for dev env
-      - JAVA_OPTS=-Xmx1g -Xms512m  # Batasi Java Heap sesuai kapasitas
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+      - JAVA_OPTS=-Xmx1g -Xms512m
     deploy:
       resources:
         limits:
