Add deployment logic for Git repository in production workflow

--- a/.github/workflows/cd-prod.yml
+++ b/.github/workflows/cd-prod.yml
@@ -30,3 +30,14 @@ jobs:
                 mkdir /home/yis
                 cd /home/yis
               fi
+
+              if [ -d ".git" ]; then
+                echo "Ada folder .git, melakukan git pull..."
+                git remote set-url origin https://${{ secrets.GIT_USERNAME }}:${{ secrets.GIT_PAT }}@github.com/${{ secrets.GIT_USERNAME }}/cicd_database_example.git
+                git pull origin main
+              else
+                echo "Gak ada folder .git, melakukan git clone..."
+                git clone https://${{ secrets.GIT_USERNAME }}:${{ secrets.GIT_PAT }}@github.com/${{ secrets.GIT_USERNAME }}/cicd_database_example.git .
+              fi
+
+              echo "Berhasil Deploy ke Server"
